# docservicetest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
app/: main.py
app/db/: config.py  queries.sql
app/models/: models.py
app/schemas/: schemas.py
app/utils/: crud.py
